# Composite-Image-Generator

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_config.py  cig_docker_config.yml  start.sh
docs/: dev-docs
include/: Canvas.h  Dataset.h  Label.h  Ooi.h  randomFunc.h
python_scripts/: labelMe2Coco.py
src/: Background.cpp  Canvas.cpp  Config.cpp  Dataset.cpp  Label.cpp  Ooi.cpp  main.cpp  randomFunc.cpp
